--- a/flask_app/templates/table.html
+++ b/flask_app/templates/table.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Flask App</title>
+    <style>
+    table, th, td {
+        border: 1px solid black;
+    }
+    </style>
   </head>
   <body>
     <h1>Get the Table</h1>
@@ -10,9 +15,20 @@
       <input type="submit" value="Get CSV FILE!"/>
     </form>
     <ul>
-      {% for x in game %}
-        <li>{{ x }}</li>
-      {% endfor %}
+        <table>
+            <tr>
+                <td><b>game</b></td>
+                <td><b>alphabet</b></td>
+                <td><b>release_date</b></td>
+            </tr>
+            {% for x in game %}
+            <tr>
+                <td>{{ x['game'] }}</td>
+                <td>{{ x['alphabet'] }}</td>
+                <td>{{ x['release_date'] }}</td>
+            </tr>
+            {% endfor %}
+        </table>
     </ul>
   </body>
 </html>
