--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -10,5 +10,10 @@
       <input type="submit" value="Get CSV FILE!"/>
       <p>{{ins}}</p>
     </form>
+    <form action="/crawl" method="GET">
+      <label for="findname">Name of game:</label>
+      <input type="text" id="findname" name="name"><br><br>
+      <input type="submit" value="Search">
+  </form>
   </body>
 </html>
