--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -154,7 +154,7 @@
       margin: 5% auto;
       padding: 20px;
       border: 1px solid #888;
-      width: 80%;
+      width: 30%;
     }
     
     .modal-header{
@@ -221,18 +221,23 @@
     }
 
     .card { 
-      border: 1px solid;
-      border-radius:  1.5rem;
+      /* border: 1px solid; */
+      /* border-radius:  1.5rem; */
       display: flex;
       flex-direction: column;
       width: 350px;
-      align-items: center;
+      align-items: start;
       background-color: white;
       margin: 0px 30px;
-      
+      box-shadow: 0 4px 8px 0 rgba(0,0,0,0.5);
+      transition: 0.3s;
       padding-bottom: 20px;
     }
 
+    .card:hover {
+      box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    }
+    
     .card li {
       list-style: none;
       margin: 10px 10px;
@@ -255,10 +260,11 @@
     #card-img {
       height: 100%; 
       width: 100%;
-      border-radius: 1.5rem 1.5rem 0 0;
+      /* border-radius: 1.5rem 1.5rem 0 0; */
     }
 
   </style>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
   <div class="container">
@@ -268,7 +274,7 @@
           <div class="spinner"></div>
       </div>
       
-      <h1>The ToC Web Crawler.</h1>
+      <h1>The ToC Web Crawler.  <a href="https://github.com/Norawit2907/TOC_WebScraping">source_code<i class="fa-brands fa-github"></i></a></h1>
     </header>
   
     <section class="intro">
@@ -292,26 +298,28 @@
     <div id="gameTableBody">
     </div>
 
-    <!-- Modal for game list -->
-    <!-- <div id="myModal" class="modal">
+    <div id="myModal" class="modal">
       <div class="modal-content">
         <div class="modal-header">
-          <h2>Search Results</h2>
-          <form action="/getcsv">
-            <input type="hidden" id="search_name_input" name="name" value="">
-            <input type="submit" value="Get CSV FILE!"/>
-          </form>
-          <span class="close">&times;</span>
+          <h2>Credit</h2>
         </div>
-        <div id="gameTableBody">
-        </div>
+        <hr>
+          <p>65010971 วสิษฐ์พล มลิวัลย์</p>
+          <p>65010512 นรวิชญ์ โฆษิตพันธวงศ์</p>
+          <p>65010627 ปัณณทัต โรจน์เอกจิตต์</p>
+          <p>65010703 ธนพล ศรีสุวรรณ</p>
+          <p>65011084 สรัล บัวหภักดี</p>
+          <p>65010710 พศิน ม่วงไหมแพร</p>
+          <p>65010796 ธันย์ธนัช เงาวิศิษฎ์กุล</p>
+          <p>65010101 คฑาภัท คุณธรรมสถิต</p>
+          <p>65010662 พงศพัศ วงศ์สวัสดิ์</p>
+          <p>65010907 รณกร คูประสิทธิ์</p>
       </div>
-    </div> -->
+    </div>
   
 
   <script>
-    let count = 0;
-    const cardCount = 3;
+    const cardCount = 4;
     let rows = 0;
     let addedCardPerRow = 0;
     let currentRow = 0;
@@ -356,33 +364,32 @@
           `;
           document.getElementById(`row${currentRow}`).appendChild(card);
           addedCardPerRow++;
-          count++;
         });
       } else {
         const row = document.createElement('p');
         row.innerHTML = 'No results found';
         gameTableBody.appendChild(row);
       }
-      document.querySelector("html").style.height = count/2 * 100 + "vh";
+      // document.querySelector("html").style.height = data.game.length/2 * 100 + "vh";
       // document.getElementById('search_name_input').value = name; 
 
       stopSpinner();
       searchButton.disabled = false; 
       // document.getElementById('myModal').style.display = "block";
     };
-    // const modal = document.getElementById("myModal");
+    const modal = document.getElementById("myModal");
 
-    // const span = document.getElementsByClassName("close")[0];
+    const span = document.getElementsByClassName("credits-btn")[0];
 
     const spinElement = document.querySelector('.spinner');
-    // span.onclick = function() {
-    //   modal.style.display = "none";
-    // }
-    // window.onclick = function(event) {
-    //   if (event.target == modal) {
-    //     modal.style.display = "none";
-    //   }
-    // }
+    span.onclick = function() {
+      modal.style.display = "block";
+    }
+    window.onclick = function(event) {
+      if (event.target == modal) {
+        modal.style.display = "none";
+      }
+    }
     function startSpinner() {
       spinElement.classList.add('start-spin');
     }
