--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -359,63 +359,75 @@
   <script>
     const cardCount = 4;
     let rows = 0;
-    let addedCardPerRow = 0;
-    let currentRow = 0;
+
     document.getElementById('searchForm').onsubmit = async function(event) {
       event.preventDefault();
 
       const searchButton = document.querySelector('#searchForm button[type="submit"]');
       searchButton.disabled = true; 
-
+      let addedCardPerRow = 0;
+      let currentRow = 0;
       const name = document.getElementById('findname').value;
-      const response = await fetch(`/crawl?name=${encodeURIComponent(name)}`);
-      const data = await response.json(); 
-
       const gameTableBody = document.getElementById('gameTableBody');
       gameTableBody.innerHTML = '';
-
-      if (data.game.length > 0) {
-        console.log('hi');
-        for (let i = 0; i < Math.ceil(data.game.length/cardCount); i++) { 
-            const row = document.createElement('div');
-            row.className = 'row'
-            row.id = `row${i}`
-            gameTableBody.appendChild(row);
-            console.log('hi');
+      try{
+        const response = await fetch(`/crawl?name=${encodeURIComponent(name)}`);
+        if (!response.ok) {
+          throw new Error('Connection error: Unable to fetch data');
         }
-        data.game.forEach(game => {
-          if (addedCardPerRow == cardCount) {
-            currentRow++;
-            addedCardPerRow = 0;
-          } 
-          const card = document.createElement('div');
-          card.className = 'card'
-          card.innerHTML = `
-            <div id='card-img-container'>
-              <img id = 'card-img' src="${game.pic_link}">
-            </div>
-            <ul>
-              <li>Name: ${game.game}</li>
-              <li>Alphabet :${game.alphabet}</li>
-              <li>Release Date: ${game.release_date}</li>
-            </ul>
-          `;
-          document.getElementById(`row${currentRow}`).appendChild(card);
-          addedCardPerRow++;
-        });
-      } else {
-        const row = document.createElement('p');
-        row.innerHTML = 'No results found';
-        gameTableBody.appendChild(row);
-      }
-      // document.querySelector("html").style.height = data.game.length/2 * 100 + "vh";
-      document.getElementById('search_name_input').value = name; 
+        const data = await response.json(); 
 
-      stopSpinner();
-      searchButton.disabled = false; 
-      document.getElementById('getdacsv').style.display = "flex";
-      // document.getElementById('myModal').style.display = "block";
-    };
+
+
+        if (data.game.length > 0) {
+          console.log('hi');
+          for (let i = 0; i < Math.ceil(data.game.length/cardCount); i++) { 
+              const row = document.createElement('div');
+              row.className = 'row'
+              row.id = `row${i}`
+              gameTableBody.appendChild(row);
+              console.log('hi');
+          }
+          data.game.forEach(game => {
+            if (addedCardPerRow == cardCount) {
+              currentRow++;
+              addedCardPerRow = 0;
+            } 
+            const card = document.createElement('div');
+            card.className = 'card'
+            card.innerHTML = `
+              <div id='card-img-container'>
+                <img id = 'card-img' src="${game.pic_link}">
+              </div>
+              <ul>
+                <li>Name: ${game.game}</li>
+                <li>Alphabet :${game.alphabet}</li>
+                <li>Release Date: ${game.release_date}</li>
+              </ul>
+            `;
+            document.getElementById(`row${currentRow}`).appendChild(card);
+            addedCardPerRow++;
+          });
+        } else {
+          const row = document.createElement('p');
+          row.innerHTML = 'No results found';
+          gameTableBody.appendChild(row);
+        } 
+      } catch(error) {
+          stopSpinner();
+          searchButton.disabled = false;
+          alert(error.message);
+      } finally{
+        // document.querySelector("html").style.height = data.game.length/2 * 100 + "vh";
+
+        document.getElementById('search_name_input').value = name; 
+
+        stopSpinner();
+        searchButton.disabled = false; 
+        document.getElementById('getdacsv').style.display = "flex";
+        // document.getElementById('myModal').style.display = "block";
+        }
+      };
     const modal = document.getElementById("myModal");
 
     const span = document.getElementsByClassName("credits-btn")[0];
