--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -342,16 +342,16 @@
           <h2>Credit</h2>
         </div>
         <hr>
-          <p>65010971 วสิษฐ์พล มลิวัลย์</p>
+          <p>65011084 สรัล บัวหภักดี </p>
+          <p>65010101 คฑาภัท คุณธรรมสถิต</p>
           <p>65010512 นรวิชญ์ โฆษิตพันธวงศ์</p>
           <p>65010627 ปัณณทัต โรจน์เอกจิตต์</p>
-          <p>65010703 ธนพล ศรีสุวรรณ</p>
-          <p>65011084 สรัล บัวหภักดี</p>
+          <p>65010662 พงศพัศ วงศ์สวัสดิ์</p>
           <p>65010710 พศิน ม่วงไหมแพร</p>
           <p>65010796 ธันย์ธนัช เงาวิศิษฎ์กุล</p>
-          <p>65010101 คฑาภัท คุณธรรมสถิต</p>
-          <p>65010662 พงศพัศ วงศ์สวัสดิ์</p>
+          <p>65010894 ยศนนท์ ปั้นทองพันธุ์</p>
           <p>65010907 รณกร คูประสิทธิ์</p>
+          <p>65010971 วสิษฐ์พล มลิวัลย์</p>
       </div>
     </div>
   
